k8s/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: dqx0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: nginxdemos/hello:plain-text
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: dqx0
spec:
  selector:
    app: hello
  ports:
  - name: http
    port: 80
    targetPort: 80
